cluster/apps/security/crowdsec/app/lapi-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crowdsec-lapi
  namespace: security
spec:
  parentRefs:
    - name: private
      namespace: networking
      sectionName: websecure-private
  hostnames:
    - crowdsec-lapi.${SECRET_PRIVATE_DOMAIN}
  rules:
    - backendRefs:
        - name: crowdsec-service
          port: 8080
